# win-airplay

./: CMakeLists.txt  README.md  airplay-plugin.cpp  airplaycapture.cpp  airplaycapture.hpp  log.cpp  mediaserver.h  videosource.cpp  videosource.h  videosource.hpp  win-airplay.cpp
data/locale/: zh-CN.ini
libs/: AirPlay.lib  fdk-aac.lib  mycrypt.lib
